<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_vendor</name>
  <version>0.0.3</version>
  <description>Vendor package for Mujoco simulator</description>
  <maintainer email="sergi.acosta@pal-robotics.com">user</maintainer>
  <license>Apache-2.0 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <build_depend>libglfw3-dev</build_depend>
  <build_depend>libxinerama-dev</build_depend>
  <build_depend>libxcursor-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>libxrandr</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
